<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_outline_grey600_24dp"
        android:title="@string/home"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_magnify_grey600_24dp"
        android:title="@string/search"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/add_new"
        android:icon="@drawable/ic_plus_box_grey600_24dp"
        android:title="@string/add"
        android:visible="true"
        app:showAsAction="always"/>


    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_bell_outline_grey600_24dp"
        android:title="@string/notifications"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account_outline_grey600_24dp"
        android:title="@string/profile"
        android:visible="true"
        app:showAsAction="always"/>


</menu>